--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>repast.param.wrapper</groupId>
     <artifactId>param.wrapper</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>com.mashape.unirest</groupId>
@@ -36,6 +37,7 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.2</version>
                 <configuration>
