--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>repast.param.wrapper</groupId>
-    <artifactId>param.wrapper</artifactId>
+    <groupId>au.edu.unimelb.eresearch.repast</groupId>
+    <artifactId>parameterswrapper</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
